# GameGoogleTranslate

./: .gitignore  CMakeLists.txt  HadesSJSON.cpp  README.md  download.py  init-linux.sh  init-mac.sh  init-win.bat  init.sh  makefile
HyperTranslate/: .gitignore  CMakeLists.txt  Podfile
HyperTranslate/HyperTranslate/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
HyperTranslate/HyperTranslate.xcodeproj/: project.pbxproj
HyperTranslate/HyperTranslate.xcodeproj/xcshareddata/xcschemes/: HyperTranslate.xcscheme
HyperTranslate/HyperTranslate.xcworkspace/: contents.xcworkspacedata
HyperTranslate/HyperTranslate/Base.lproj/: Main.storyboard
mac.xcodeproj/: project.pbxproj
src/: HadesSJSON.cpp  MinecraftCreditsTranslate.cpp  MinecraftJSONDiff.cpp  MinecraftJSONSame.cpp  MinecraftTranslate.cpp  MinecraftTranslate.h  OperationBase.cpp  OperationBase.h  download.py
